<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessfulRegisterTree">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/main_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:text="@string/successful_register_tree_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tree_final" />

        <TextView
            android:id="@+id/main_activity_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/successful_register_tree_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/successful_register_tree_button_restart"
            app:cornerRadius="27dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back_to_beginning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimaryAccent"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/successful_register_tree_button_exit"
            android:textColor="@color/colorSecondary"
            app:cornerRadius="27dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>