<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/main_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/activity_main_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/activity_main_button"
            app:cornerRadius="27dp" />

        <TextView
            android:id="@+id/main_activity_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/activity_main_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="[Label del árbol]"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10 / 10 / 2020"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/riesgoButton"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:backgroundTint="@color/colorPrimaryAccent"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconTint="@color/colorTertiary" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>